--- a/index.html
+++ b/index.html
@@ -3,17 +3,35 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bootstrap demo</title>
+    <title>Milan Đumić :: developer</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <script
+      async
+      src="https://kit.fontawesome.com/c9219fe591.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <header class="header container-fluid">
+      <nav>
+        <img src="assets/img/mdjlogo.png" class="nav-logo" alt="" />
+        <ul class="nav_links">
+          <li class="nav_item nav_item-hover">
+            <a href="#" class="nav_link">Home</a>
+          </li>
+          <li class="nav_item"><a href="#" class="nav_link">Work</a></li>
+          <li class="nav_item"><a href="#" class="nav_link">Skills</a></li>
+          <li class="nav_item"><a href="#" class="nav_link">About</a></li>
+        </ul>
+      </nav>
+    </header>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
