--- a/index.html
+++ b/index.html
@@ -18,20 +18,210 @@
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
   <body>
-    <header class="header container-fluid">
-      <nav>
+    <header class="header">
+      <nav class="nav">
         <img src="assets/img/mdjlogo.png" class="nav-logo" alt="" />
         <ul class="nav_links">
-          <li class="nav_item nav_item-hover">
-            <a href="#" class="nav_link">Home</a>
+          <!-- <li class="nav_item"><a href="#home" class="nav_link">Home</a></li> -->
+          <li class="nav_item"><a href="#work" class="nav_link">Work</a></li>
+          <li class="nav_item">
+            <a href="#skills" class="nav_link">Skills</a>
           </li>
-          <li class="nav_item"><a href="#" class="nav_link">Work</a></li>
-          <li class="nav_item"><a href="#" class="nav_link">Skills</a></li>
-          <li class="nav_item"><a href="#" class="nav_link">About</a></li>
+          <li class="nav_item"><a href="#about" class="nav_link">About</a></li>
+          <li class="nav_item"><a href="#contact" class="nav_link">Contact me</a></li>
+          
         </ul>
       </nav>
+      <div class="container">
+        <div class="row vspacer header_content">
+          <div class="col-md-6">
+            <h1 class="header_title">
+              <span>Hi, I'm Milan.</span><br />
+              I design and code beautiful stuff for web
+            </h1>
+          </div>
+        </div>
+      </div>
     </header>
 
+    <section id="work" class="container">
+      <div class="row">
+        <h1 class="section_heading">work</h1>
+      </div>
+
+      <div class="project_boxes justify-content-center row">
+        <div class="project_boxes-box col-md-6 col-sm-12 col-xs-12">
+          <h3>First project</h3>
+          <img
+            src="https://via.placeholder.com/320x200.png"
+            class="img-fluid"
+            alt=""
+          />
+          <div class="box-description">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
+              repellat exercitationem ad labore explicabo. Animi, maxime atque
+              iusto provident quaerat doloribus minus eveniet pariatur maiores
+              velit minima nulla molestiae vel.
+            </p>
+            <div class="box-used-tech">
+              <div class="tech"><i class="fa-brands fa-html5"></i></div>
+              <div class="tech"><i class="fa-brands fa-css3"></i></div>
+              <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project_boxes-box col-md-6">
+          <h3>First project</h3>
+          <img
+            src="https://via.placeholder.com/320x200.png"
+            class="img-fluid"
+            alt=""
+          />
+          <div class="box-description">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
+              repellat exercitationem ad labore explicabo. Animi, maxime atque
+              iusto provident quaerat doloribus minus eveniet pariatur maiores
+              velit minima nulla molestiae vel.
+            </p>
+            <div class="box-used-tech">
+              <div class="tech"><i class="fa-brands fa-html5"></i></div>
+              <div class="tech"><i class="fa-brands fa-css3"></i></div>
+              <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+            </div>
+          </div>
+        </div>
+        <div class="project_boxes-box col-md-6">
+          <h3>First project</h3>
+          <img
+            src="https://via.placeholder.com/320x200.png"
+            class="img-fluid"
+            alt=""
+          />
+          <div class="box-description">
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
+              repellat exercitationem ad labore explicabo. Animi, maxime atque
+              iusto provident quaerat doloribus minus eveniet pariatur maiores
+              velit minima nulla molestiae vel.
+            </p>
+            <div class="box-used-tech">
+              <div class="tech"><i class="fa-brands fa-html5"></i></div>
+              <div class="tech"><i class="fa-brands fa-css3"></i></div>
+              <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="skills" class="container">
+      <div class="row">
+        <h1 class="section_heading">skills</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-12 col-sm-12 col-xs-12 skill-badges">
+          <i class="fa-brands fa-html5 skill-badge"></i>
+          <i class="fa-brands fa-css3 skill-badge"></i>
+          <i class="fa-brands fa-js-square skill-badge"></i>
+          <i class="fa-brands fa-react skill-badge"></i>
+          <i class="fa-brands fa-bootstrap skill-badge"></i>
+          <i class="fa-brands fa-sass skill-badge"></i>
+          <i class="fa-brands fa-figma skill-badge"></i>
+          
+        </div>
+        <div class="col-md-6">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
+            dolor est suscipit nemo culpa esse cum repellendus, facere cumque
+            deserunt accusamus corrupti soluta autem? At veritatis deleniti
+            autem minima. Consectetur!
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
+            fugit reprehenderit quasi eum fuga, rerum distinctio voluptates
+            beatae aspernatur officia architecto assumenda cum est alias illo
+            qui vitae, harum nostrum, blanditiis cumque odio sapiente enim.
+            Fugit officiis incidunt eius labore molestiae, fuga quidem tempora
+            enim laboriosam soluta sapiente ut? Qui eveniet eum nisi, nulla quia
+            odio dolorem, illum porro aspernatur illo in dolore harum itaque
+            possimus rerum ipsum natus facere dicta omnis, placeat repellat
+            voluptas fuga quo labore. Ducimus velit, pariatur optio unde quae
+            fugiat qui amet officia sint delectus animi, minus modi deleniti
+            explicabo nobis, earum corrupti cum quis!
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section id="about" class="container">
+      <div class="row">
+        <h1 class="section_heading">about</h1>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-sm-12">
+          <img
+            src="https://via.placeholder.com/600x400"
+            alt=""
+            class="img-fluid"
+          />
+        </div>
+        <div class="col-md-6 col-sm-12">
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+            nisi sint, vitae sapiente nulla vel omnis consectetur voluptates cum
+            veritatis! Reiciendis, facilis doloremque adipisci voluptate nam
+            dolorem odit beatae voluptates vitae. Ratione minus odit maxime enim
+            laudantium quo itaque amet, quia dolor cupiditate! Reiciendis quo
+            numquam iste qui, doloribus fuga sed ut a voluptatum ducimus! Neque
+            incidunt fugit soluta expedita saepe sapiente laborum atque quod
+            voluptas veritatis facere eveniet odio reiciendis accusamus porro
+            dolorem libero at, similique veniam omnis eius quae qui officia
+            dolorum. Molestiae aliquid architecto blanditiis, ratione dolore
+            sunt omnis enim itaque, dicta aliquam saepe velit, alias nesciunt
+            vitae! Nostrum et ut magnam dolore. Perspiciatis, placeat? Rem velit
+            quibusdam nam vel in saepe inventore sed officia, blanditiis rerum.
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <ul class="footer__nav">
+        <li class="footer__item">
+          <a class="footer__link" href="#">About</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Pricing</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Terms of Use</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Privacy Policy</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Careers</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Blog</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Contact Us</a>
+        </li>
+      </ul>
+      <img src="assets/img/mdjlogo.png" alt="Logo" class="footer__logo" />
+      <p class="footer__copyright">
+        &copy; Copyright by
+        <a
+          class="footer__link twitter-link"
+          target="_blank"
+          href="https://twitter.com/dambusns"
+          >Milan Đumić</a
+        >. 
+        <p></p>
+      </p>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
