--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <header class="header">
+      <div class="overlay"></div>
       <nav class="nav">
         <img src="assets/img/mdjlogo.png" class="nav-logo" alt="" />
         <ul class="nav_links">
@@ -36,9 +37,12 @@
         <div class="row vspacer header_content">
           <div class="col-md-6">
             <h1 class="header_title">
-              <span>Hi, I'm Milan.</span><br />
-              I design and code beautiful stuff for web
+              <span class="cursive">Hi, I'm Milan.</span><br />
+              I <a href="#work"><span class="design">design</span></a> and <span class="code">code</span> beautiful <span class="stuff">stuff</span> for web
             </h1>
+          </div>
+          <div class="col-md-6 design_content">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
           </div>
         </div>
       </div>
