--- a/index.html
+++ b/index.html
@@ -36,13 +36,21 @@
       <div class="container">
         <div class="row vspacer header_content">
           <div class="col-md-6">
-            <h1 class="header_title">
+            <h1 class="header_title vibrate-1">
               <span class="cursive">Hi, I'm Milan.</span><br />
-              I <a href="#work"><span class="design">design</span></a> and <span class="code">code</span> beautiful <span class="stuff">stuff</span> for web
+              I <a href="#work" ><span class="design" data-color='orangered'data-calldiv="design_content">design</span></a> and <a href="" ><span class="code" data-color='forestgreen' data-calldiv="code_content">code</span></a> beautiful <span class="stuff" data-color='cornflowerblue' data-calldiv="stuff_content">stuff</span> for web
             </h1>
           </div>
-          <div class="col-md-6 design_content">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+          <div class="col-md-6 contentWrap">
+            <div class="design_content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+            </div>
+            <div class="code_content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+            </div>
+            <div class="stuff_content">
+              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+            </div>
           </div>
         </div>
       </div>
