--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
           </div>
           <div class="col-md-6 contentWrap">
             <div class="design_content">
+              <img src="assets/img/undraw_handcrafts_photo.svg" class="img design_content-img" alt="">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
             </div>
             <div class="code_content">
