--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
           <div class="col-md-6 contentWrap">
             <div class="design_content">
               <img src="assets/img/undraw_handcrafts_photo.svg" class="img design_content-img" alt="">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+              <p class="design_content-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
             </div>
             <div class="code_content">
+              <img src="assets/img/undraw_creation_re_d1mi.svg" class="img design_content-img" alt="">
               <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
             </div>
             <div class="stuff_content">
@@ -64,7 +65,9 @@
 
       <div class="project_boxes justify-content-center row">
         <div class="project_boxes-box col-md-6 col-sm-12 col-xs-12">
-          <h3>First project</h3>
+          <div class="project_boxes-project-name">
+            <h3>First project</h3>
+          </div>
           <img
             src="https://via.placeholder.com/320x200.png"
             class="img-fluid"
@@ -85,7 +88,9 @@
           </div>
         </div>
         <div class="project_boxes-box col-md-6">
-          <h3>First project</h3>
+          <div class="project_boxes-project-name">
+            <h3>Second project</h3>
+          </div>
           <img
             src="https://via.placeholder.com/320x200.png"
             class="img-fluid"
@@ -106,7 +111,9 @@
           </div>
         </div>
         <div class="project_boxes-box col-md-6">
-          <h3>First project</h3>
+          <div class="project_boxes-project-name">
+            <h3>Third project</h3>
+          </div>
           <img
             src="https://via.placeholder.com/320x200.png"
             class="img-fluid"
@@ -144,7 +151,7 @@
           <i class="fa-brands fa-figma skill-badge"></i>
           
         </div>
-        <div class="col-md-6">
+        <div class="offset-3 col-md-6 text-center justify-content-center">
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
             dolor est suscipit nemo culpa esse cum repellendus, facere cumque
@@ -180,7 +187,7 @@
             class="img-fluid"
           />
         </div>
-        <div class="col-md-6 col-sm-12">
+        <div class="col-md-6 col-sm-12 text-center">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam
             nisi sint, vitae sapiente nulla vel omnis consectetur voluptates cum
@@ -202,26 +209,21 @@
     <footer class="footer">
       <ul class="footer__nav">
         <li class="footer__item">
+          <a class="footer__link" href="#">Top</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Work</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="#">Skills</a>
+        </li>
+        <li class="footer__item">
           <a class="footer__link" href="#">About</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="#">Pricing</a>
+          <a class="footer__link" href="#">Contact me</a>
         </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#">Terms of Use</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#">Privacy Policy</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#">Careers</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#">Blog</a>
-        </li>
-        <li class="footer__item">
-          <a class="footer__link" href="#">Contact Us</a>
-        </li>
+        
       </ul>
       <img src="assets/img/mdjlogo.png" alt="Logo" class="footer__logo" />
       <p class="footer__copyright">
@@ -231,7 +233,7 @@
           target="_blank"
           href="https://twitter.com/dambusns"
           >Milan Đumić</a
-        >. 
+        > 2022.
         <p></p>
       </p>
     </footer>
