--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="overlay"></div>
       <nav class="nav">
-        <img src="assets/img/mdjlogo.png" class="nav-logo" alt="" />
+        <a href="" ><img src="assets/img/mdjlogo.png" class="nav-logo inlinelink"" alt="" /></a>
         <ul class="nav_links">
           <!-- <li class="nav_item"><a href="#home" class="nav_link">Home</a></li> -->
           <li class="nav_item"><a href="#work" class="nav_link">Work</a></li>
@@ -38,7 +38,7 @@
           <div class="col-md-6">
             <h1 class="header_title vibrate-1">
               <span class="cursive">Hi, I'm Milan.</span><br />
-              I <a href="#work" ><span class="design" data-color='orangered'data-calldiv="design_content">design</span></a> and <a href="" ><span class="code" data-color='forestgreen' data-calldiv="code_content">code</span></a> beautiful <span class="stuff" data-color='cornflowerblue' data-calldiv="stuff_content">stuff</span> for web
+              I <a href="#work" ><span class="design" data-color='orangered'data-calldiv="design_content">design</span></a> and <a href="#skills" ><span class="code" data-color='forestgreen' data-calldiv="code_content">code</span></a> beautiful <span class="stuff" data-color='cornflowerblue' data-calldiv="stuff_content">stuff</span> for web
             </h1>
           </div>
           <div class="col-md-6 contentWrap">
@@ -63,73 +63,68 @@
         <h1 class="section_heading">work</h1>
       </div>
 
-      <div class="project_boxes justify-content-center row">
-        <div class="project_boxes-box col-md-6 col-sm-12 col-xs-12">
+      <div class="project_boxes justify-content-start row">
+        <div class="project_boxes-box col-lg-6 offset-lg-3 col-sm-12 col-sm-12 col-xs-12">
           <div class="project_boxes-project-name">
-            <h3>First project</h3>
+            <h3>Neopetrol Inženjering</h3>
           </div>
           <img
-            src="https://via.placeholder.com/320x200.png"
+            src="assets/img/projects/project_1.png"
             class="img-fluid"
             alt=""
           />
           <div class="box-description">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
-              repellat exercitationem ad labore explicabo. Animi, maxime atque
-              iusto provident quaerat doloribus minus eveniet pariatur maiores
-              velit minima nulla molestiae vel.
+             Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf ond 4 languages available for viewing or download.
             </p>
             <div class="box-used-tech">
               <div class="tech"><i class="fa-brands fa-html5"></i></div>
               <div class="tech"><i class="fa-brands fa-css3"></i></div>
               <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+              <div class="tech"><i class="fa-brands fa-bootstrap"></i></div>
+              <div class="tech"><i><img src="assets/img/logos/ps-logo.png" alt=""></i></div>
             </div>
           </div>
         </div>
-        <div class="project_boxes-box col-md-6">
+        <div class="project_boxes-box col-lg-6 offset-lg-3 col-sm-12 col-sm-12 col-xs-12">
           <div class="project_boxes-project-name">
-            <h3>Second project</h3>
+            <h3>My Portfolio</h3>
           </div>
           <img
-            src="https://via.placeholder.com/320x200.png"
+            src="assets/img/projects/project_2.png"
             class="img-fluid"
             alt=""
           />
           <div class="box-description">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
-              repellat exercitationem ad labore explicabo. Animi, maxime atque
-              iusto provident quaerat doloribus minus eveniet pariatur maiores
-              velit minima nulla molestiae vel.
+              My first portfolio. Done from template, heavily modified, but still credited. Made with lots of love.
             </p>
             <div class="box-used-tech">
               <div class="tech"><i class="fa-brands fa-html5"></i></div>
               <div class="tech"><i class="fa-brands fa-css3"></i></div>
               <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+              <div class="tech"><i><img src="assets/img/logos/ps-logo.png" alt=""></i></div>
             </div>
           </div>
         </div>
-        <div class="project_boxes-box col-md-6">
+        <div class="project_boxes-box col-lg-6 offset-lg-3 col-sm-12 col-sm-12 col-xs-12">
           <div class="project_boxes-project-name">
-            <h3>Third project</h3>
+            <h3>Food ordering app</h3>
           </div>
           <img
-            src="https://via.placeholder.com/320x200.png"
+            src="assets/img/projects/project_3.png"
             class="img-fluid"
             alt=""
           />
           <div class="box-description">
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis
-              repellat exercitationem ad labore explicabo. Animi, maxime atque
-              iusto provident quaerat doloribus minus eveniet pariatur maiores
-              velit minima nulla molestiae vel.
+              Simple food ordering app, with all the math and crate functionality. Done as a practical project, part of the React course i'm attending.
             </p>
             <div class="box-used-tech">
               <div class="tech"><i class="fa-brands fa-html5"></i></div>
               <div class="tech"><i class="fa-brands fa-css3"></i></div>
               <div class="tech"><i class="fa-brands fa-js-square"></i></div>
+              <div class="tech"><i class="fa-brands fa-react"></i></div>
             </div>
           </div>
         </div>
@@ -150,27 +145,14 @@
           <i class="fa-brands fa-sass skill-badge"></i>
           <i class="fa-brands fa-figma skill-badge"></i>
           
+          
         </div>
-        <div class="offset-3 col-md-6 text-center justify-content-center">
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores
-            dolor est suscipit nemo culpa esse cum repellendus, facere cumque
-            deserunt accusamus corrupti soluta autem? At veritatis deleniti
-            autem minima. Consectetur!
-          </p>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus
-            fugit reprehenderit quasi eum fuga, rerum distinctio voluptates
-            beatae aspernatur officia architecto assumenda cum est alias illo
-            qui vitae, harum nostrum, blanditiis cumque odio sapiente enim.
-            Fugit officiis incidunt eius labore molestiae, fuga quidem tempora
-            enim laboriosam soluta sapiente ut? Qui eveniet eum nisi, nulla quia
-            odio dolorem, illum porro aspernatur illo in dolore harum itaque
-            possimus rerum ipsum natus facere dicta omnis, placeat repellat
-            voluptas fuga quo labore. Ducimus velit, pariatur optio unde quae
-            fugiat qui amet officia sint delectus animi, minus modi deleniti
-            explicabo nobis, earum corrupti cum quis!
-          </p>
+        <div class="offset-lg-3 col-lg-6 col-md-12 text-center justify-content-start">
+          <p class="cursive"><em>Skills</em> is such a harsh word for creative peoople.</p>
+          <p>So let's talk about things I'm good at instead.<br>
+          For example, i'm very good at <strong><a href="https://www.linkedin.com/pulse/googling-one-most-underestimated-skills-world-shubham-chakraborty/" class="inlineLink" target="_blank">googling</a></strong>. Hell, I learned to code in few languages just by searching examples and tutorials online. Majority of problems we encounter while programming - solutions can be found (through google) on various sites and online comunities. Asking the right question is a key. And it's a skill.</p>
+          <p>Second "skill" would definetly be <strong>creativity</strong>. <br> Just can't imagine a developer that is not creative, even just a little. <br>Well, <strong><a href="" class="inlineLink">others say</a></strong> (and I believe them) that I'm above average creative, and that jobs that doesn't involve creativity and freedom would bore me to death easily.</p>
+          <p>Other technicals I feel comfortable using are listed at the top of section, you can't miss them...</p>
         </div>
       </div>
     </section>
