--- a/index.html
+++ b/index.html
@@ -68,11 +68,19 @@
           <div class="project_boxes-project-name">
             <h3>Neopetrol Inženjering</h3>
           </div>
-          <img
-            src="assets/img/projects/project_1.png"
-            class="img-fluid"
-            alt=""
-          />
+          <div class="
+          project-wrapper">
+            <img
+              src="assets/img/projects/project_1.png"
+              class="img-fluid"
+              alt=""
+            />
+            <div class="project-links">
+              <div class="close-button">
+                <a class="closeProjectLinks" href=""><i class="fa fa-window-close"></i></a></div>
+              <p>test tekst</p>
+            </div>
+          </div>
           <div class="box-description">
             <p>
              Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf ond 4 languages available for viewing or download.
@@ -90,11 +98,20 @@
           <div class="project_boxes-project-name">
             <h3>My Portfolio</h3>
           </div>
+          <div class="
+          project-wrapper">
           <img
-            src="assets/img/projects/project_2.png"
-            class="img-fluid"
-            alt=""
-          />
+          src="assets/img/projects/project_2.png"
+          class="img-fluid"
+          alt=""
+        />
+            <div class="project-links">
+              <div class="close-button">
+                <a class="closeProjectLinks" href=""><i class="fa fa-window-close"></i></a></div>
+              <p>test tekst</p>
+            </div>
+          </div>
+          
           <div class="box-description">
             <p>
               My first portfolio. Done from template, heavily modified, but still credited. Made with lots of love.
