--- a/index.html
+++ b/index.html
@@ -33,32 +33,34 @@
           
         </ul>
       </nav>
-      <div class="container">
-        <div class="row vspacer header_content">
-          <div class="col-md-6">
-            <h1 class="header_title vibrate-1">
-              <span class="cursive">Hi, I'm Milan.</span><br />
-              I <a href="#work" ><span class="design" data-color='orangered'data-calldiv="design_content">design</span></a> and <a href="#skills" ><span class="code" data-color='forestgreen' data-calldiv="code_content">code</span></a> beautiful <span class="stuff" data-color='cornflowerblue' data-calldiv="stuff_content">stuff</span> for web
-            </h1>
-          </div>
-          <div class="col-md-6 contentWrap">
-            <div class="design_content">
-              <img src="assets/img/undraw_handcrafts_photo.svg" class="img design_content-img" alt="">
-              <p class="design_content-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+      <div class="container-fluid finisher-header">
+        <div class="container">
+          <div class="row header_content">
+            <div class="col-md-6">
+              <h1 class="header_title vibrate-1">
+                <span class="cursive">Hi, I'm Milan.</span><br />
+                I <a href="#work" ><span class="design" data-color='orangered'data-calldiv="design_content">design</span></a> and <a href="#skills" ><span class="code" data-color='forestgreen' data-calldiv="code_content">code</span></a> beautiful <span class="stuff" data-color='cornflowerblue' data-calldiv="stuff_content">stuff</span> for web
+              </h1>
             </div>
-            <div class="code_content">
-              <img src="assets/img/undraw_creation_re_d1mi.svg" class="img design_content-img" alt="">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
-            </div>
-            <div class="stuff_content">
-              <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+            <div class="col-md-6 contentWrap">
+              <div class="design_content">
+                <img src="assets/img/undraw_handcrafts_photo.svg" class="img design_content-img" alt="">
+                <p class="design_content-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+              </div>
+              <div class="code_content">
+                <img src="assets/img/undraw_creation_re_d1mi.svg" class="img design_content-img" alt="">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+              </div>
+              <div class="stuff_content">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </header>
 
-    <section id="work" class="container">
+    <section id="work" class="container mt-5">
       <div class="row">
         <h1 class="section_heading">work</h1>
       </div>
@@ -128,11 +130,20 @@
           <div class="project_boxes-project-name">
             <h3>Food ordering app</h3>
           </div>
+          <div class="
+          project-wrapper">
           <img
-            src="assets/img/projects/project_3.png"
-            class="img-fluid"
-            alt=""
-          />
+          src="assets/img/projects/project_3.png"
+          class="img-fluid"
+          alt=""
+        />
+            <div class="project-links">
+              <div class="close-button">
+                <a class="closeProjectLinks" href=""><i class="fa fa-window-close"></i></a></div>
+              <p>test tekst</p>
+            </div>
+          </div>
+          
           <div class="box-description">
             <p>
               Simple food ordering app, with all the math and crate functionality. Done as a practical project, part of the React course i'm attending.
@@ -241,6 +252,7 @@
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
     ></script>
+    <script src="assets/js/finisher-header.es5.min.js" type="text/javascript"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
