header section illustrations

--- a/index.html
+++ b/index.html
@@ -43,19 +43,35 @@
             </div>
             <div class="col-md-6 contentWrap">
               <div class="design_content">
-                <img src="assets/img/undraw_handcrafts_photo.svg" class="img design_content--img" alt="">
+                <div class="row">
+                  <div class="col-6">
+                    <img src="assets/img/illustrations/Static assets-bro.svg" class="img img-fluid" alt="">
+                  </div>
+                  <div class="col-6">
+                    <p class="design_content--text">First of all, I'm very creative individual. But being too creative often produces complicated designs. Thats why I try to keep my creativity on a leash and daily learn and folow best practices in the field of design to create simple and user friendly interfaces.</p>
+                    <p class="design_content--text">
+                      By clicking on that word you're hovering on with your mouse you can jump to section and see my work
+                    </p>
+                  </div>
+                </div>
+                <!-- <img src="assets/img/illustrations/Static assets-bro.svg" class="img design_content--img" alt="">
                 <p class="design_content--text">First of all, I'm very creative individual. But being too creative often produces complicated designs. Thats why I try to keep my creativity on a leash and daily learn and folow best practices in the field of design to create simple and user friendly interfaces.</p>
                 <p class="design_content--text">
                   By clicking on that word you're hovering on with your mouse you can jump to section and see my work
-                </p>
+                </p> -->
               </div>
               <div class="code_content">
-                <img src="assets/img/undraw_creation_re_d1mi.svg" class="img code_content--img" alt="">
-                <p class="design_content--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+                <img src="assets/img/illustrations/Hand coding-bro.png" class="img code_content--img" alt="">
+                <p class="design_content--text">I like foreign languages, can speak a few. Same stands for programming, I can write a few.</p>
+                <p class="design_content--text"> By clicking on that word you're hovering on with your mouse you can jump to section and read about my skills</p>
+
               </div>
               <div class="stuff_content">
-                <img src="assets/img/undraw_creation_re_d1mi.svg" class="img stuff_content--img" alt="">
-                <p class="stuff_content--text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo, totam, commodi unde qui officia doloribus ullam ad facilis vitae ipsam error maxime esse veritatis, aut quasi consectetur magni deserunt voluptatum?</p>
+                <img src="assets/img/illustrations/Software integration-bro.svg" class="img stuff_content--img" alt="">
+                <p class="stuff_content--text">I create mostly websites, presentations. Rarely some flyers, posters, cards. Currently learnign to do web apps.</p>
+                <p class="stuff_content--text">
+                  By clicking on that word you're hovering on with your mouse you can jump to section and see my work
+                </p>
               </div>
             </div>
           </div>
@@ -149,7 +165,7 @@
           
           <div class="box-description">
             <p>
-              Simple food ordering app, with all the math and crate functionality. Done as a practical project, part of the React course i'm attending.
+              Simple food ordering app, with all the math and check-out functionality. Done as a practical project, part of the React course i'm attending.
             </p>
             <div class="box-used-tech">
               <div class="tech"><i class="fa-brands fa-html5"></i></div>
@@ -225,13 +241,13 @@
           <a class="footer__link" href="#header">Top</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="#">Work</a>
+          <a class="footer__link" href="#work">Work</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="#">Skills</a>
+          <a class="footer__link" href="#skills">Skills</a>
         </li>
         <li class="footer__item">
-          <a class="footer__link" href="#">About</a>
+          <a class="footer__link" href="#about">About</a>
         </li>
         <li class="footer__item">
           <a class="footer__link" href="#">Contact me</a>
@@ -247,7 +263,10 @@
           href="https://twitter.com/dambusns"
           >Milan Đumić</a
         > 2022.
-        <p></p>
+        <p><a href="https://storyset.com/computer">Computer illustrations by Storyset</a>
+          <a href="https://storyset.com/work">Work illustrations by Storyset</a>
+          <a href="https://storyset.com/technology">Technology illustrations by Storyset</a>
+          <a href="https://storyset.com/web">Web illustrations by Storyset</a></p>
       </p>
     </footer>
     <script
