--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           </div>
           <div class="box-description">
             <p>
-             Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf ond 4 languages available for viewing or download.
+             Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf on 4 languages available for viewing or download.
             </p>
             <div class="box-used-tech">
               <div class="tech"><i class="fa-brands fa-html5"></i></div>
