--- a/index.html
+++ b/index.html
@@ -78,6 +78,36 @@
       </div>
     </header>
 
+    <section id="work2" class="vspacer">
+      <div class="container">
+      <div class="row">
+        <h1 class="section_heading">my work</h1>
+      </div>
+      <div class="row g-5">
+        <div class="col-lg-6">
+          <div class="card"">
+            <img src="assets/img/projects/project_1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card">
+            <img src="assets/img/projects/project_2.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+
     <section id="work" class="container">
       <div class="row">
         <h1 class="section_heading">my work</h1>
