--- a/index.html
+++ b/index.html
@@ -83,24 +83,53 @@
       <div class="row">
         <h1 class="section_heading">my work</h1>
       </div>
-      <div class="row g-5">
+      <div class="row g-5 justify-content-center">
         <div class="col-lg-6">
-          <div class="card"">
+          <div class="card project-card"">
             <img src="assets/img/projects/project_1.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">Neopetrol Inzenjering</h5>
+              <p class="card-text">  Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf on 4 languages available for viewing or download.</p>
+              <p class="used">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3"></i>
+                <i class="fa-brands fa-js-square"></i>
+                <i class="fa-brands fa-bootstrap"></i>
+               <i><img src="assets/img/logos/ps-logo.png" alt=""></i>
+              </p>
             </div>
           </div>
         </div>
         <div class="col-lg-6">
-          <div class="card">
+          <div class="card  project-card">
             <img src="assets/img/projects/project_2.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <h5 class="card-title">My portfolio</h5>
+              <p class="card-text">My first portfolio. Done from template, heavily modified, but still credited. Made with lots of love.</p>
+              <p class="used">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3"></i>
+                <i class="fa-brands fa-js-square"></i>
+                <i class="fa-brands fa-bootstrap"></i>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card  project-card">
+            <img src="assets/img/projects/project_3.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Food ordering app</h5>
+              <p class="card-text">Simple food ordering app, with all the math and check-out functionality. Done as a practical project, part of the React course i'm attending.</p>
+              
+                <p class="used">
+                  <i class="fa-brands fa-html5"></i>
+                  <i class="fa-brands fa-css3"></i>
+                  <i class="fa-brands fa-js-square"></i>
+                  <i class="fa-brands fa-bootstrap"></i>
+                  <i class="fa-brands fa-react"></i>
+                </p>
+            
             </div>
           </div>
         </div>
