--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       </div>
     </header>
 
-    <section id="work2" class="vspacer">
+    <section id="work" class="vspacer">
       <div class="container">
       <div class="row">
         <h1 class="section_heading">my work</h1>
@@ -90,13 +90,17 @@
             <div class="card-body">
               <h5 class="card-title">Neopetrol Inzenjering</h5>
               <p class="card-text">  Company presentation, writtent from scratch. Implemented live search option for list of projects, company profile pdf on 4 languages available for viewing or download.</p>
-              <p class="used">
+              <div class="used goMiddle">                
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3"></i>
                 <i class="fa-brands fa-js-square"></i>
                 <i class="fa-brands fa-bootstrap"></i>
                <i><img src="assets/img/logos/ps-logo.png" alt=""></i>
-              </p>
+               <div class="project-links-lg d-flex justify-content-center">
+                <a href="https://www.npi.rs" target="_blank" class="more"><i class="fa-solid fa-circle-info"></i></a>
+                <a href="https://www.npi.rs" target="_blank" class="go"><i class="fa-solid fa-link"></i></a>
+              </div>
+            </div>
             </div>
           </div>
         </div>
@@ -106,12 +110,16 @@
             <div class="card-body">
               <h5 class="card-title">My portfolio</h5>
               <p class="card-text">My first portfolio. Done from template, heavily modified, but still credited. Made with lots of love.</p>
-              <p class="used">
+              <div class="used goMiddle">
                 <i class="fa-brands fa-html5"></i>
                 <i class="fa-brands fa-css3"></i>
                 <i class="fa-brands fa-js-square"></i>
                 <i class="fa-brands fa-bootstrap"></i>
-              </p>
+                <div class="project-links-lg d-flex justify-content-center">
+                  <a href="#" target="_blank" class="more"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="https://dambus.github.io/myPortfolio/" target="_blank" class="go"><i class="fa-solid fa-link"></i></a>
+                  </div>
+              </div>
             </div>
           </div>
         </div>
@@ -122,14 +130,36 @@
               <h5 class="card-title">Food ordering app</h5>
               <p class="card-text">Simple food ordering app, with all the math and check-out functionality. Done as a practical project, part of the React course i'm attending.</p>
               
-                <p class="used">
+                <div class="used goMiddle">
                   <i class="fa-brands fa-html5"></i>
                   <i class="fa-brands fa-css3"></i>
                   <i class="fa-brands fa-js-square"></i>
                   <i class="fa-brands fa-bootstrap"></i>
                   <i class="fa-brands fa-react"></i>
-                </p>
+                  <div class="project-links-lg d-flex justify-content-center">
+                    <a href="#" target="_blank" class="more"><i class="fa-solid fa-circle-info"></i></a>
+                    <a href="https://joyful-fudge-0313da.netlify.app/" target="_blank" class="go"><i class="fa-solid fa-link"></i></a>
+                    </div>
+                </div>
             
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6">
+          <div class="card project-card"">
+            <img src="assets/img/projects/project_4.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bankist App</h5>
+              <p class="card-text">  Simple Javascript app that simulates banking transfers between users and loan from bank. Made as a part of Javascript course I'm attending.</p>
+              <div class="used goMiddle">
+                <i class="fa-brands fa-html5"></i>
+                <i class="fa-brands fa-css3"></i>
+                <i class="fa-brands fa-js-square"></i>
+                <div class="project-links-lg d-flex justify-content-center">
+                  <a href="#" target="_blank" class="more"><i class="fa-solid fa-circle-info"></i></a>
+                  <a href="https://dambus.github.io/bankist-app/" target="_blank" class="go"><i class="fa-solid fa-link"></i></a>
+                  </div>     
+              </p>
             </div>
           </div>
         </div>
@@ -137,7 +167,7 @@
     </div>
     </section>
 
-    <section id="work" class="container">
+    <!-- <section id="work" class="container">
       <div class="row">
         <h1 class="section_heading">my work</h1>
       </div>
@@ -234,7 +264,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <section id="skills" class="container">
       <div class="row">
