--- a/project-2.html
+++ b/project-2.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
@@ -17,81 +17,79 @@
     ></script>
     <link rel="stylesheet" href="assets/css/main.css" />
   </head>
-  <body>
-    <div class="container">
-      <div class="row">
+  <body> -->
+<div class="project-case">
+  <div class="row">
+    <img
+      class="img img-fluid project-case--img"
+      src="assets/img/projects/project_2.png"
+      alt=""
+    />
+  </div>
+  <div class="row">
+    <h5>Project</h5>
+    <h1>my portfolio</h1>
+  </div>
+  <div class="row">
+    <div class="col-lg-6">
+      <h5 class="mb-2"><strong>about</strong></h5>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint
+        aperiam facere modi cupiditate sit culpa tempore, optio exercitationem
+        adipisci laudantium ea nam obcaecati expedita quas, repellat consequatur
+        non. Placeat voluptate similique vero unde! Quibusdam aut repellat et
+        assumenda explicabo provident nemo minus officiis laudantium
+        consequuntur nesciunt, eos accusamus facilis, suscipit iusto! Assumenda
+        adipisci natus quidem maiores atque harum? Perferendis incidunt
+        molestiae est, consequatur dolor distinctio at explicabo similique
+        accusamus excepturi. Iusto possimus nihil
+      </p>
+      <h5 class="mb-2"><strong>year</strong></h5>
+      <p>2021.</p>
+      <h5 class="mb-2"><strong>used tech</strong></h5>
+      <p style="font-size: 2rem">
+        <i class="fa-brands fa-html5"></i>
+        <i class="fa-brands fa-css3"></i>
+        <i class="fa-brands fa-js-square"></i>
+        <i class="fa-brands fa-bootstrap"></i>
+        <i><img width="2rem" src="assets/img/logos/ps-logo.png" alt="" /></i>
+      </p>
+      <h5 class="mb-2"><strong>features</strong></h5>
+
+      <ul>
+        <li>responsive</li>
+        <li>
+          javascript powered live search for projects in references section
+        </li>
+        <li>also designed CV which is downloadable</li>
+      </ul>
+    </div>
+    <div class="col-lg-6">
+      <div class="skwd">
         <img
+          src="assets/img/projects/project_1.png"
           class="img img-fluid"
-          src="assets/img/projects/project_2.png"
           alt=""
         />
       </div>
-      <div class="row">
-        <h5>Project</h5>
-        <h1>my portfolio</h1>
+      <div class="skwd">
+        <img
+          src="assets/img/projects/project_1.png"
+          class="img img-fluid"
+          alt=""
+        />
       </div>
-      <div class="row">
-        <div class="col-lg-6">
-          <h5 class="mb-2"><strong>about</strong></h5>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Et, sint
-            aperiam facere modi cupiditate sit culpa tempore, optio
-            exercitationem adipisci laudantium ea nam obcaecati expedita quas,
-            repellat consequatur non. Placeat voluptate similique vero unde!
-            Quibusdam aut repellat et assumenda explicabo provident nemo minus
-            officiis laudantium consequuntur nesciunt, eos accusamus facilis,
-            suscipit iusto! Assumenda adipisci natus quidem maiores atque harum?
-            Perferendis incidunt molestiae est, consequatur dolor distinctio at
-            explicabo similique accusamus excepturi. Iusto possimus nihil
-          </p>
-          <h5 class="mb-2"><strong>year</strong></h5>
-          <p>2021.</p>
-          <h5 class="mb-2"><strong>used tech</strong></h5>
-          <p style="font-size: 2rem">
-            <i class="fa-brands fa-html5"></i>
-            <i class="fa-brands fa-css3"></i>
-            <i class="fa-brands fa-js-square"></i>
-            <i class="fa-brands fa-bootstrap"></i>
-            <i
-              ><img width="2rem" src="assets/img/logos/ps-logo.png" alt=""
-            /></i>
-          </p>
-          <h5 class="mb-2"><strong>features</strong></h5>
-
-          <ul>
-            <li>responsive</li>
-            <li>
-              javascript powered live search for projects in references section
-            </li>
-            <li>also designed CV which is downloadable</li>
-          </ul>
-        </div>
-        <div class="col-lg-6">
-          <div class="skwd">
-            <img
-              src="assets/img/projects/project_1.png"
-              class="img img-fluid"
-              alt=""
-            />
-          </div>
-          <div class="skwd">
-            <img
-              src="assets/img/projects/project_1.png"
-              class="img img-fluid"
-              alt=""
-            />
-          </div>
-          <div class="skwd">
-            <img
-              src="assets/img/projects/project_1.png"
-              class="img img-fluid"
-              alt=""
-            />
-          </div>
-        </div>
+      <div class="skwd">
+        <img
+          src="assets/img/projects/project_1.png"
+          class="img img-fluid"
+          alt=""
+        />
       </div>
     </div>
-    <script
+  </div>
+</div>
+<!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
       crossorigin="anonymous"
@@ -102,4 +100,4 @@
     ></script>
     <script src="assets/js/main.js"></script>
   </body>
-</html>
+</html> -->
